<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.utbm.retornaz.connnexionwifi.Activities.Setting" >
    
    
    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:text="@string/settingTextView" />

    <TextView
        android:id="@+id/serverAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settingTextView"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="31dp"
        android:text="@string/serverAddressTextView" />

    <TextView
        android:id="@+id/serverPortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/serverAddressEditText"
        android:layout_below="@+id/serverAddressEditText"
        android:layout_marginTop="26dp"
        android:text="@string/serverPortTextView" />
    
        <EditText
        android:id="@+id/serverAddressEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/serverAddressTextView"
        android:layout_below="@+id/serverAddressTextView"
        android:ems="10"
        android:text="@string/serverAddressEditText" />

            <EditText
                android:id="@+id/serverPortEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/serverPortTextView"
                android:layout_below="@+id/serverPortTextView"
                android:ems="10"
                android:text="@string/serverPortEditText" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/confirmSettingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="48dp"
                android:background="#DEDEDE"
                android:text="@string/confirmSettingBtn" />
    
</RelativeLayout>